Production/kubesphere-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubesphere-ingress
  namespace: kubesphere-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.terrestrial.cloud
      http:
        paths:
          - path: /(.*)
            pathType: Prefix

            backend:

              service:

                name: ks-console

                port:

                  number: 80
